about section styling

--- a/src/about/index.html
+++ b/src/about/index.html
@@ -8,13 +8,13 @@ layout: default
     class="flex flex-col justify-center items-center text-center relative w-full h-[150px] md:h-[250px] bg-[#1E6CB0] bg-cover bg-center"
   >
     <div class="relative z-10 px-4 md:px-0">
-      <h1 class="text-4xl md:text-6xl font-bold text-white">{{title}}</h1>
+      <h1>{{title}}</h1>
     </div>
   </section>
 
-  <section class="pt-12">
+  <section class="mt-12">
     <div class="container mx-auto px-6 grid grid-cols-1 md:grid-cols-2 gap-8">
-      <!-- Left Side: Contact Info -->
+      <!-- Left Side: About Us -->
       <div class="flex flex-col justify-center">
         <h2 class="mb-4">Who we are</h2>
         <p class="text-gray-600 mb-8">
@@ -36,7 +36,7 @@ layout: default
         </p>
       </div>
 
-      <!-- Right Side: Owner's Image -->
+      <!-- Right Side: About Image -->
       <div class="flex justify-center md:justify-end items-center">
         <img
           src="../static/img/about/schaefer-auto11.jpeg"
@@ -48,7 +48,7 @@ layout: default
   </section>
 
   <section class="mt-16 bg-gray-100">
-    <div class="container mx-auto px-6 py-8">
+    <div class="container mx-auto px-6 pt-8 pb-16">
       <!-- Section Title -->
       <div class="mb-16 text-center">
         <h2>Meet the Team</h2>
@@ -69,7 +69,7 @@ layout: default
           <h3 class="mb-0">Caleb Schaefer</h3>
           <h4 class="text-[#1E6CB0] font-medium">Owner</h4>
 
-          <p class="text-gray-600">
+          <p class="text-gray-600 text-left">
             Schaefer Auto originated from Caleb’s passion for “flipping”
             vehicles, ATV’s, boats, trailers, etc. He has continued to grow the
             business on his own, while remaining hands on. Caleb works to ensure
@@ -88,7 +88,7 @@ layout: default
           />
           <h3 class="mb-0">Roman</h3>
           <h4 class="text-[#1E6CB0] font-medium">Auto Technician</h4>
-          <p class="text-gray-600">
+          <p class="text-gray-600 text-left">
             Roman was the first addition to Schaefer Auto. He joined us with
             education from the Universal Technical Institute in automotive
             technician training. Prior to joining our team, he had multiple
@@ -107,7 +107,7 @@ layout: default
           <h3 class="mb-0">Randy</h3>
           <h4 class="text-[#1E6CB0] font-medium">Auto Technician</h4>
 
-          <p class="text-gray-600">
+          <p class="text-gray-600 text-left">
             Randy has immense experience in the automotive industry. He is an
             important part of the team, applying his almost 30 years, as both an
             auto technician and in a management role.
@@ -124,7 +124,7 @@ layout: default
           <h3 class="mb-0">Holly</h3>
           <h4 class="text-[#1E6CB0] font-medium">Office Associate</h4>
 
-          <p class="text-gray-600">
+          <p class="text-gray-600 text-left">
             Holly handles an assortment of responsibilities to ensure your
             purchase experience is exceptional. She works to handle customer
             inquiries, assists in vehicle transactions, and bookkeeping. Holly
@@ -142,8 +142,8 @@ layout: default
             alt="Member 5"
             class="w-40 h-40 object-cover rounded-full mb-4"
           />
-          <h3 class="mb-0">Sage</h3>
-          <p class="text-gray-600">
+          <h3 class="mb-4">Sage</h3>
+          <p class="text-gray-600 text-left">
             Sage has been with us since he was 8 weeks old. He spends many of
             his days at our shop and loves to greet every customer that visits!
           </p>
