--- a/src/vehicles/index.html
+++ b/src/vehicles/index.html
@@ -9,6 +9,7 @@ title: Vehicle Inventory
   >
     <div class="relative z-10 px-4 md:px-0">
       <h1>{{title}}</h1>
+      <h1>ADD SEARCH FUNCTIONALITY</h1>
     </div>
   </section>
 
