--- a/src/about/index.html
+++ b/src/about/index.html
@@ -40,7 +40,7 @@ layout: default
       <div class="flex justify-center md:justify-end items-center">
         <img
           src="../static/img/about/schaefer-auto11.jpeg"
-          alt="Caleb Schaefer"
+          alt="Schaefer Auto"
           class="lg:w-5/6 w-full h-96 object-cover rounded-lg shadow-lg"
         />
       </div>
@@ -50,7 +50,7 @@ layout: default
   <section class="mt-16 bg-gray-100">
     <div class="container mx-auto px-6 pt-8 pb-16">
       <!-- Section Title -->
-      <div class="mb-16 text-center">
+      <div class="mb-10 text-center">
         <h2>Meet the Team</h2>
         <p class="text-gray-700 mt-2">
           We are an experienced team looking to help you!
@@ -63,11 +63,11 @@ layout: default
         <div class="flex flex-col items-center text-center">
           <img
             src="../static/img/employees/caleb-schaefer.jpg"
-            alt="Member 1"
+            alt="Caleb Schaefer"
             class="w-40 h-40 object-cover rounded-full mb-4"
           />
           <h3 class="mb-0">Caleb Schaefer</h3>
-          <h4 class="text-[#1E6CB0] font-medium">Owner</h4>
+          <h5>Owner</h5>
 
           <p class="text-gray-600 text-left">
             Schaefer Auto originated from Caleb’s passion for “flipping”
@@ -83,11 +83,11 @@ layout: default
         <div class="flex flex-col items-center text-center">
           <img
             src="../static/img/employees/roman.jpg"
-            alt="Member 2"
+            alt="Roman"
             class="w-40 h-40 object-cover rounded-full mb-4"
           />
           <h3 class="mb-0">Roman</h3>
-          <h4 class="text-[#1E6CB0] font-medium">Auto Technician</h4>
+          <h5>Auto Technician</h5>
           <p class="text-gray-600 text-left">
             Roman was the first addition to Schaefer Auto. He joined us with
             education from the Universal Technical Institute in automotive
@@ -101,11 +101,11 @@ layout: default
         <div class="flex flex-col items-center text-center">
           <img
             src="../static/img/employees/randy.jpg"
-            alt="Member 3"
+            alt="Randy"
             class="w-40 h-40 object-cover rounded-full mb-4"
           />
           <h3 class="mb-0">Randy</h3>
-          <h4 class="text-[#1E6CB0] font-medium">Auto Technician</h4>
+          <h5>Auto Technician</h5>
 
           <p class="text-gray-600 text-left">
             Randy has immense experience in the automotive industry. He is an
@@ -118,11 +118,11 @@ layout: default
         <div class="flex flex-col items-center text-center">
           <img
             src="../static/img/employees/holly.jpg"
-            alt="Member 4"
+            alt="Holly"
             class="w-40 h-40 object-cover rounded-full mb-4"
           />
           <h3 class="mb-0">Holly</h3>
-          <h4 class="text-[#1E6CB0] font-medium">Office Associate</h4>
+          <h5>Office Associate</h5>
 
           <p class="text-gray-600 text-left">
             Holly handles an assortment of responsibilities to ensure your
@@ -139,7 +139,7 @@ layout: default
         <div class="flex flex-col items-center text-center">
           <img
             src="../static/img/employees/sage.jpg"
-            alt="Member 5"
+            alt="Sage"
             class="w-40 h-40 object-cover rounded-full mb-4"
           />
           <h3 class="mb-4">Sage</h3>
