--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@ path: home
 
 <!-- Featured Inventory Section -->
 <section class="container mt-10 px-6">
-  <h2 class="text-left">Featured Inventory</h2>
+  <h2>Featured Inventory</h2>
   <p class="text-left mt-2">Check out our latest vehicles.</p>
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
     {% for post in collections.post | reverse %} {% if loop.index <= 6 %} {%
