--- a/src/testimonials/index.html
+++ b/src/testimonials/index.html
@@ -8,7 +8,7 @@ layout: default
     class="flex flex-col justify-center items-center text-center relative w-full h-[150px] md:h-[250px] bg-[#1E6CB0] bg-cover bg-center"
   >
     <div class="relative z-10 px-4 md:px-0">
-      <h1 class="text-4xl md:text-6xl font-bold text-white">{{title}}</h1>
+      <h1>{{title}}</h1>
     </div>
   </section>
 
