--- a/src/vehicles/index.html
+++ b/src/vehicles/index.html
@@ -16,7 +16,7 @@ title: Vehicle Inventory
     class="flex flex-row justify-center items-center text-center relative bg-gray-100 bg-cover bg-center"
   >
     <div class="relative z-10 px-4 py-6 md:px-0 w-full max-w-lg">
-      <h2 class="mb-4">Search For Your Next Ride</h2>
+      <h3 class="mb-4">Browse Vehicle Options</h3>
       <!-- Search Form -->
       <form id="searchForm" class="flex items-center flex-nowrap w-full">
         <input
@@ -27,9 +27,9 @@ title: Vehicle Inventory
         />
         <button
           type="submit"
-          class="p-2 bg-[#1E6CB0] text-white rounded-r-md hover:bg-blue-700 whitespace-nowrap"
+          class="px-6 py-2 bg-[#1E6CB0] text-white rounded-r-md hover:bg-blue-700 whitespace-nowrap"
         >
-          Find
+          Search
         </button>
       </form>
     </div>
