--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@ path: home
       <!-- First Button: View Inventory (Solid Blue) -->
       <a
         href="/vehicles"
-        class="px-6 py-3 border-2 border-white bg-[#1E6CB0] text-white rounded-lg hover:bg-blue-600"
+        class="px-6 py-3 border-2 border-white bg-[#1E6CB0] text-white rounded-lg hover:bg-[#155789]"
       >
         View Inventory
       </a>
@@ -32,7 +32,7 @@ path: home
       <!-- Second Button: Contact Us (Outlined Blue) -->
       <a
         href="/contact"
-        class="px-6 py-3 bg-[#1E6CB0] text-white rounded-lg hover:bg-blue-600"
+        class="px-6 py-3 bg-[#1E6CB0] text-white rounded-lg hover:bg-[#155789]"
       >
         Contact Us
       </a>
@@ -55,7 +55,7 @@ path: home
     <div class="col-span-full flex justify-center mt-8">
       <a
         href="/vehicles"
-        class="px-6 py-3 border-2 border-white bg-[#1E6CB0] text-white rounded-lg hover:bg-blue-600"
+        class="px-6 py-3 border-2 border-white bg-[#1E6CB0] text-white rounded-lg hover:bg-[#155789]"
       >
         View All Vehicles
       </a>
@@ -129,7 +129,7 @@ path: home
     <div class="col-span-full flex justify-center mt-6">
       <a
         href="/testimonials"
-        class="px-6 py-3 border-2 border-white bg-[#1E6CB0] text-white rounded-lg hover:bg-blue-600"
+        class="px-6 py-3 border-2 border-white bg-[#1E6CB0] text-white rounded-lg hover:bg-[#155789]"
       >
         View All Testimonials
       </a>
@@ -156,7 +156,7 @@ path: home
       <div class="mt-4">
         <a
           href="/about"
-          class="px-6 py-3 border-2 border-white bg-[#1E6CB0] text-white rounded-lg hover:bg-blue-600 inline-block"
+          class="px-6 py-3 border-2 border-white bg-[#1E6CB0] text-white rounded-lg hover:bg-[#155789] inline-block"
         >
           Learn More
         </a>
@@ -219,7 +219,7 @@ path: home
               name="name"
               required
               placeholder="Name"
-              class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
+              class="mt-2 w-full p-3 border rounded-lg focus:ring-1 focus:ring-[#1E6CB0]"
             />
           </div>
 
@@ -234,7 +234,7 @@ path: home
               name="email"
               required
               placeholder="Email"
-              class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
+              class="mt-2 w-full p-3 border rounded-lg focus:ring-1 focus:ring-[#1E6CB0]"
             />
           </div>
 
@@ -248,7 +248,7 @@ path: home
               id="phone"
               name="phone"
               placeholder="Phone"
-              class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
+              class="mt-2 w-full p-3 border rounded-lg focus:ring-1 focus:ring-[#1E6CB0]"
             />
           </div>
 
@@ -263,7 +263,7 @@ path: home
               required
               rows="6"
               placeholder="Type your message here..."
-              class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-[#1E6CB0]"
+              class="mt-2 w-full p-3 border rounded-lg focus:ring-1 focus:ring-[#1E6CB0]"
             ></textarea>
           </div>
 
@@ -271,7 +271,7 @@ path: home
           <div class="text-center mt-4">
             <button
               type="submit"
-              class="px-8 py-4 bg-[#1E6CB0] text-white font-semibold rounded-lg hover:bg-blue-600"
+              class="px-8 py-4 bg-[#1E6CB0] text-white font-semibold rounded-lg hover:bg-[#155789]"
             >
               Send Message
             </button>
