--- a/src/testimonials/index.html
+++ b/src/testimonials/index.html
@@ -117,7 +117,7 @@ layout: default
               name="name"
               required
               placeholder="Your Name"
-              class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
+              class="mt-2 w-full p-3 border rounded-lg focus:ring-1 focus:ring-[#1E6CB0]"
             />
           </div>
 
@@ -132,7 +132,7 @@ layout: default
               required
               rows="3"
               placeholder="Type your review here..."
-              class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
+              class="mt-2 w-full p-3 border rounded-lg focus:ring-1 focus:ring-[#1E6CB0]"
             ></textarea>
           </div>
 
@@ -140,7 +140,7 @@ layout: default
           <div class="text-center">
             <button
               type="submit"
-              class="px-6 py-3 bg-[#1E6CB0] text-white font-semibold rounded-lg hover:bg-blue-600"
+              class="px-6 py-3 bg-[#1E6CB0] text-white font-semibold rounded-lg hover:bg-[#155789]"
             >
               Submit Review
             </button>
