--- a/src/about/index.html
+++ b/src/about/index.html
@@ -16,7 +16,7 @@ layout: default
     <div class="container mx-auto px-6 grid grid-cols-1 md:grid-cols-2 gap-8">
       <!-- Left Side: About Us -->
       <div class="flex flex-col justify-center">
-        <h2 class="mb-4">Who we are</h2>
+        <h2 class="mb-4">Our Commitment to You</h2>
         <p class="text-gray-600 mb-8">
           Located in Lomira, Wisconsin, Schaefer Auto is a used vehicle
           dealership. It has become our mission to provide reliable vehicles for
