--- a/src/contact/index.html
+++ b/src/contact/index.html
@@ -67,7 +67,7 @@ layout: default
                   name="name"
                   required
                   placeholder="Name"
-                  class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
+                  class="mt-2 w-full p-3 border rounded-lg focus:ring-1 focus:ring-[#1E6CB0]"
                 />
               </div>
 
@@ -84,7 +84,7 @@ layout: default
                   name="email"
                   required
                   placeholder="Email"
-                  class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
+                  class="mt-2 w-full p-3 border rounded-lg focus:ring-1 focus:ring-[#1E6CB0]"
                 />
               </div>
 
@@ -100,7 +100,7 @@ layout: default
                   id="phone"
                   name="phone"
                   placeholder="Phone"
-                  class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
+                  class="mt-2 w-full p-3 border rounded-lg focus:ring-1 focus:ring-[#1E6CB0]"
                 />
               </div>
             </div>
@@ -118,7 +118,7 @@ layout: default
                 required
                 rows="6"
                 placeholder="Type your message here..."
-                class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-[#1E6CB0]"
+                class="mt-2 w-full p-3 border rounded-lg focus:ring-1 focus:ring-[#1E6CB0]"
               ></textarea>
             </div>
 
@@ -126,7 +126,7 @@ layout: default
             <div class="text-center mt-4">
               <button
                 type="submit"
-                class="px-8 py-4 bg-[#1E6CB0] text-white font-semibold rounded-lg hover:bg-blue-600"
+                class="px-8 py-4 bg-[#1E6CB0] text-white font-semibold rounded-lg hover:bg-[#155789]"
               >
                 Send Message
               </button>
