--- a/src/vehicles/index.html
+++ b/src/vehicles/index.html
@@ -23,11 +23,11 @@ title: Vehicle Inventory
           type="text"
           id="searchInput"
           placeholder="Enter make, model, or keyword"
-          class="flex-grow p-2 border border-gray-300 rounded-l-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+          class="flex-grow p-2 border border-gray-300 rounded-lg focus:ring-1 focus:ring-[#1E6CB0] mr-2"
         />
         <button
           type="submit"
-          class="px-6 py-2 bg-[#1E6CB0] text-white rounded-r-md hover:bg-blue-700 whitespace-nowrap"
+          class="px-6 py-2 bg-[#1E6CB0] text-white rounded-lg hover:bg-[#155789] whitespace-nowrap"
         >
           Search
         </button>
