--- a/src/testimonials/index.html
+++ b/src/testimonials/index.html
@@ -39,43 +39,43 @@ layout: default
       </div>
       <div class="p-6 border rounded-lg bg-gray-100">
         <p class="italic">
-          "Honest and reliable. Offered us the perfect car for a great price."
+          “We have bought a couple vehicles from Caleb and we were extremely
+          pleased with both experiences!”
         </p>
-        <h4 class="mt-4">- Natalie</h4>
+        <h4 class="mt-4">- Steve</h4>
       </div>
       <div class="p-6 border rounded-lg bg-gray-100">
         <p class="italic">
-          "Fantastic service! Very easy to work with and very courteous. Very
-          knowledgeable."
+          “Amazing! Informative, honest, and helpful. Caleb won’t sell you a car
+          that doesn’t match your needs.”
         </p>
-        <h4 class="mt-4">- Dakota</h4>
+        <h4 class="mt-4">- Bruce</h4>
       </div>
       <div class="p-6 border rounded-lg bg-gray-100">
         <p class="italic">
-          "Caleb was friendly and helpful! Would recommend him to anyone looking
-          for a nice and affordable used car."
+          “Excellent experience. Great service, fair pricing. Highly recommend.”
         </p>
-        <h4 class="mt-4">- Briana</h4>
+        <h4 class="mt-4">- Jillian</h4>
       </div>
       <div class="p-6 border rounded-lg bg-gray-100">
         <p class="italic">
-          "Honest and reliable. Offered us the perfect car for a great price."
+          "Caleb was very personal and there was no predator buy that truck and
+          told me all the pros and cons. I will buy from him again."
         </p>
-        <h4 class="mt-4">- Natalie</h4>
+        <h4 class="mt-4">- Joe</h4>
       </div>
       <div class="p-6 border rounded-lg bg-gray-100">
         <p class="italic">
-          "Fantastic service! Very easy to work with and very courteous. Very
-          knowledgeable."
+          "Caleb was great to work with. Open honest and quick. Would suggest
+          buying a car from him to anyone!"
         </p>
-        <h4 class="mt-4">- Dakota</h4>
+        <h4 class="mt-4">- Keith</h4>
       </div>
       <div class="p-6 border rounded-lg bg-gray-100">
         <p class="italic">
-          "Caleb was friendly and helpful! Would recommend him to anyone looking
-          for a nice and affordable used car."
+          "Purchase went exactly how I expected! Very honest!!"
         </p>
-        <h4 class="mt-4">- Briana</h4>
+        <h4 class="mt-4">- Kyle</h4>
       </div>
     </div>
   </section>
