--- a/src/index.html
+++ b/src/index.html
@@ -204,7 +204,7 @@ path: home
       <div class="bg-gray-100 p-10 rounded-lg shadow-md w-full">
         <form
           method="POST"
-          action="/thank-you"
+          action="/form-submission"
           netlify
           class="grid grid-cols-1 gap-4"
         >
