--- a/src/form-submission/index.html
+++ b/src/form-submission/index.html
@@ -1,1 +1,139 @@
-<h1>Thank You!</h1>
+---
+title: Form Submission
+layout: default
+---
+
+<div class="w-full px-0 mx-0">
+  <!-- Contact Us Today Section -->
+  <section class="pt-12">
+    <div class="container mx-auto px-6 grid grid-cols-1 md:grid-cols-2 gap-12">
+      <!-- Left Side: Contact Info -->
+      <div class="flex flex-col justify-center">
+        <h2 class="mb-4">Contact Us Today</h2>
+        <p class="text-gray-600 mb-8">
+          Have questions or looking for your next vehicle? Reach out to us
+          directly or fill out the form. Our team is here to help you find the
+          perfect car!
+        </p>
+        <div class="space-y-6">
+          <div>
+            <h4>Phone</h4>
+            <p class="text-gray-700">(555) 555-5555</p>
+          </div>
+          <div>
+            <h4>Email</h4>
+            <p class="text-gray-700">contact@example.com</p>
+          </div>
+          <div>
+            <h4>Location</h4>
+            <p class="text-gray-700">123 Main Street, Hometown, USA</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Right Side: Owner's Image -->
+      <div class="flex justify-center md:justify-end items-center">
+        <img
+          src="../static/img/about/schaefer-auto11.jpeg"
+          alt="Caleb Schaefer"
+          class="w-96 h-96 object-cover rounded-lg shadow-lg"
+        />
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Form Section -->
+  <section class="mt-8 mb-12 bg-white">
+    <div class="container mx-auto px-6 py-8 grid grid-cols-1 gap-12">
+      <!-- Right Side: Contact Form (unchanged) -->
+      <div class="flex justify-center items-center">
+        <div class="bg-gray-100 p-6 rounded-lg shadow-md w-full">
+          <form
+            method="POST"
+            action="/thank-you"
+            netlify
+            class="grid grid-cols-1 gap-4"
+          >
+            <!-- Name, Email, and Phone Fields in a Row on Desktop -->
+            <div class="md:flex md:space-x-4">
+              <!-- Name Field -->
+              <div class="flex-1">
+                <label for="name" class="block text-gray-700 font-semibold mt-4"
+                  >Name</label
+                >
+                <input
+                  type="text"
+                  id="name"
+                  name="name"
+                  required
+                  placeholder="Name"
+                  class="mt-2 w-full p-3 border rounded-lg focus:ring-1 focus:ring-[#1E6CB0]"
+                />
+              </div>
+
+              <!-- Email Field -->
+              <div class="flex-1">
+                <label
+                  for="email"
+                  class="block text-gray-700 font-semibold mt-4"
+                  >Email</label
+                >
+                <input
+                  type="email"
+                  id="email"
+                  name="email"
+                  required
+                  placeholder="Email"
+                  class="mt-2 w-full p-3 border rounded-lg focus:ring-1 focus:ring-[#1E6CB0]"
+                />
+              </div>
+
+              <!-- Phone Field -->
+              <div class="flex-1">
+                <label
+                  for="phone"
+                  class="block text-gray-700 font-semibold mt-4"
+                  >Phone</label
+                >
+                <input
+                  type="tel"
+                  id="phone"
+                  name="phone"
+                  placeholder="Phone"
+                  class="mt-2 w-full p-3 border rounded-lg focus:ring-1 focus:ring-[#1E6CB0]"
+                />
+              </div>
+            </div>
+
+            <!-- Message Field -->
+            <div>
+              <label
+                for="message"
+                class="block text-gray-700 font-semibold mt-2"
+                >Message</label
+              >
+              <textarea
+                id="message"
+                name="message"
+                required
+                rows="6"
+                placeholder="Type your message here..."
+                class="mt-2 w-full p-3 border rounded-lg focus:ring-1 focus:ring-[#1E6CB0]"
+              ></textarea>
+            </div>
+
+            <!-- Submit Button -->
+            <div class="text-center mt-4">
+              <button
+                type="submit"
+                class="px-8 py-4 bg-[#1E6CB0] text-white font-semibold rounded-lg hover:bg-[#155789]"
+              >
+                Send Message
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
