--- a/src/reviews/index.html
+++ b/src/reviews/index.html
@@ -17,66 +17,12 @@ layout: default
     <div
       class="container p-6 mt-4 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"
     >
+      {% for testimonial in reviews.testimonials %}
       <div class="p-6 border rounded-lg bg-gray-100">
-        <p class="italic">
-          "Honest and reliable. Offered us the perfect car for a great price."
-        </p>
-        <h4 class="mt-4">- Natalie</h4>
+        <p class="italic">{{ testimonial.text }}</p>
+        <h4 class="mt-4">- {{ testimonial.author }}</h4>
       </div>
-      <div class="p-6 border rounded-lg bg-gray-100">
-        <p class="italic">
-          "Fantastic service! Very easy to work with and very courteous. Very
-          knowledgeable."
-        </p>
-        <h4 class="mt-4">- Dakota</h4>
-      </div>
-      <div class="p-6 border rounded-lg bg-gray-100">
-        <p class="italic">
-          "Caleb was friendly and helpful! Would recommend him to anyone looking
-          for a nice and affordable used car."
-        </p>
-        <h4 class="mt-4">- Briana</h4>
-      </div>
-      <div class="p-6 border rounded-lg bg-gray-100">
-        <p class="italic">
-          “We have bought a couple vehicles from Caleb and we were extremely
-          pleased with both experiences!”
-        </p>
-        <h4 class="mt-4">- Steve</h4>
-      </div>
-      <div class="p-6 border rounded-lg bg-gray-100">
-        <p class="italic">
-          “Amazing! Informative, honest, and helpful. Caleb won’t sell you a car
-          that doesn’t match your needs.”
-        </p>
-        <h4 class="mt-4">- Bruce</h4>
-      </div>
-      <div class="p-6 border rounded-lg bg-gray-100">
-        <p class="italic">
-          “Excellent experience. Great service, fair pricing. Highly recommend.”
-        </p>
-        <h4 class="mt-4">- Jillian</h4>
-      </div>
-      <div class="p-6 border rounded-lg bg-gray-100">
-        <p class="italic">
-          "Caleb was very personal and there was no predator buy that truck and
-          told me all the pros and cons. I will buy from him again."
-        </p>
-        <h4 class="mt-4">- Joe</h4>
-      </div>
-      <div class="p-6 border rounded-lg bg-gray-100">
-        <p class="italic">
-          "Caleb was great to work with. Open honest and quick. Would suggest
-          buying a car from him to anyone!"
-        </p>
-        <h4 class="mt-4">- Keith</h4>
-      </div>
-      <div class="p-6 border rounded-lg bg-gray-100">
-        <p class="italic">
-          "Purchase went exactly how I expected! Very honest!!"
-        </p>
-        <h4 class="mt-4">- Kyle</h4>
-      </div>
+      {% endfor %}
     </div>
   </section>
 
