--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,7 @@ path: home
     </div>
     <div class="col-span-full flex justify-center mt-6">
       <a
-        href="/testimonials"
+        href="/reviews"
         class="px-6 py-3 border-2 border-white bg-[#1E6CB0] text-white rounded-lg hover:bg-[#155789]"
       >
         View All Testimonials
