--- a/src/vehicles/index.html
+++ b/src/vehicles/index.html
@@ -27,7 +27,7 @@ title: Vehicle Inventory
         />
         <button
           type="submit"
-          class="px-6 py-2 bg-[#1E6CB0] text-white rounded-lg hover:bg-[#155789] whitespace-nowrap"
+          class="px-6 py-2 bg-[#1E6CB0] text-white rounded-lg hover:bg-[#155789] whitespace-nowrap font-bold"
         >
           Search
         </button>
