--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@ path: home
   <!-- Hero Section -->
   <section
   class="flex flex-col justify-center items-center text-center relative w-full h-[400px] md:h-[600px] bg-cover bg-center"
-  style="background-image: url('./static/img/IMG_2364.jpeg')"
+  style="background-image: url('./static/img/about/schaefer-auto3.jpeg')"
 >
   <!-- Blue overlay -->
   <div class="absolute inset-0 bg-black opacity-50"></div>
@@ -87,7 +87,7 @@ path: home
     </div>
     <div class="flex justify-center items-center">
       <img
-        src="./static/img/employees/dog.jpg"
+        src="./static/img/about/schaefer-auto2.jpeg"
         alt="Our Team"
         class="w-full h-96 object-cover rounded-lg shadow-lg"
       />
