--- a/src/reviews/index.html
+++ b/src/reviews/index.html
@@ -27,7 +27,7 @@ layout: default
   </section>
 
   <!-- Thank You Section -->
-  <section class="md:mt-12 mb-12 bg-white">
+  <section class="mt-12 py-8 bg-gray-100">
     <div class="container mx-auto p-6 grid grid-cols-1 lg:grid-cols-2 gap-8">
       <!-- Left: Thank You Message -->
       <div>
@@ -45,7 +45,7 @@ layout: default
       </div>
 
       <!-- Right: Form -->
-      <div class="bg-gray-100 p-6 rounded-lg shadow-md">
+      <div class="bg-[#1E6CB0] p-10 rounded-lg shadow-md">
         <form
           method="POST"
           action="/thank-you"
@@ -54,7 +54,7 @@ layout: default
         >
           <!-- Name Field -->
           <div>
-            <label for="name" class="block text-gray-700 font-semibold"
+            <label for="name" class="block text-white font-semibold"
               >Name</label
             >
             <input
@@ -69,7 +69,7 @@ layout: default
 
           <!-- Message Field -->
           <div>
-            <label for="message" class="block text-gray-700 font-semibold"
+            <label for="message" class="block text-white font-bold"
               >Message</label
             >
             <textarea
@@ -86,7 +86,7 @@ layout: default
           <div class="text-center">
             <button
               type="submit"
-              class="px-6 py-3 bg-[#1E6CB0] text-white font-semibold rounded-lg hover:bg-[#155789]"
+              class="px-8 py-4 bg-white text-[#1E6CB0] font-semibold rounded-lg hover:bg-[#155789]"
             >
               Submit Review
             </button>
