--- a/src/about/index.html
+++ b/src/about/index.html
@@ -18,28 +18,29 @@ layout: default
       <div class="flex flex-col justify-center">
         <h2 class="mb-4">Our Commitment to You</h2>
         <p class="text-gray-600 mb-8">
-          Located in Lomira, Wisconsin, Schaefer Auto is a used vehicle
-          dealership. It has become our mission to provide reliable vehicles for
-          a price point you cannot beat. We take pride in providing a wide
-          variety of vehicles with ranging makes, models, years, and mileage to
-          ensure you leave with a vehicle to fit both your needs and budget. If
-          you are not seeing the vehicle you had in mind, don’t worry. We will
-          work with you to provide exactly what you are looking for.
+          Located in Lomira, Wisconsin, Schaefer Auto is your trusted
+          destination for reliable used vehicles at unbeatable prices. We take
+          pride in offering a diverse selection of makes, models, years, and
+          mileage options, ensuring you’ll find a vehicle that fits your
+          lifestyle and budget. Don’t see exactly what you’re looking for? No
+          problem—our team will go the extra mile to help you find the perfect
+          match.
         </p>
 
         <p class="text-gray-600 mb-8">
-          We understand purchasing a vehicle can be stressful; to mitigate this,
-          we welcome you to visit Schaefer Auto for your next vehicle purchase.
-          We will work to find a vehicle made best suited for you, while
-          providing a prompt and painless experience. We have proudly been
-          serving both the local community and surrounding states since 2021.
+          We know buying a vehicle can feel overwhelming, which is why we focus
+          on creating a stress-free experience. Visit Schaefer Auto for your
+          next purchase, where we’ll work with you to find a car tailored to
+          your needs, all while ensuring a quick and hassle-free process.
+          Proudly serving the local community and beyond since 2021, we’re here
+          to help you drive away with confidence.
         </p>
       </div>
 
       <!-- Right Side: About Image -->
       <div class="flex justify-center md:justify-end items-center">
         <img
-          src="../static/img/about/schaefer-auto2.jpeg"
+          src="../static/img/about/schaefer-auto4.jpeg"
           alt="Schaefer Auto"
           class="lg:w-5/6 w-full h-96 object-cover rounded-lg shadow-lg"
         />
