--- a/src/reviews/index.html
+++ b/src/reviews/index.html
@@ -86,7 +86,7 @@ layout: default
           <div class="text-center">
             <button
               type="submit"
-              class="px-8 py-4 bg-white text-[#1E6CB0] font-semibold rounded-lg hover:bg-[#155789]"
+              class="px-8 py-4 bg-white text-[#1E6CB0] font-semibold rounded-lg hover:bg-gray-200"
             >
               Submit Review
             </button>
