--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,8 @@ path: home
       class="mt-4 text-lg md:text-xl text-white mx-auto"
       style="max-width: 600px;"
     >
-      Located in Lomira, Wisconsin, we’re dedicated to helping you drive away in the ideal vehicle at a price that fits your budget.
+      
+Located in Lomira, Wisconsin, Schaefer Auto is committed to helping you find the perfect vehicle at a price that suits your budget.
     </p>
     <div class="mt-10 space-x-4">
       <!-- First Button: View Inventory (Solid Blue) -->
@@ -68,28 +69,22 @@ path: home
     <div class="flex flex-col justify-center">
       <h2 class="text-white">Welcome to Schaefer Auto</h2>
       <p class="mt-4 text-white">
-        Located in Lomira, Wisconsin, Schaefer Auto is a used vehicle
-        dealership. It has become our mission to provide reliable vehicles for
-        a price point you cannot beat. We take pride in providing a wide
-        variety of vehicles with ranging makes, models, years, and mileage to
-        ensure you leave with a vehicle to fit both your needs and budget. If
-        you are not seeing the vehicle you had in mind, don’t worry. We will
-        work with you to provide exactly what you are looking for.
+        Located in Lomira, Wisconsin, Schaefer Auto is your go-to destination for quality used vehicles at unbeatable prices. Our mission is to provide dependable cars that fit your budget, and we take pride in offering a wide selection of makes, models, years, and mileage options. If the vehicle you’re looking for isn’t on our lot, don’t worry—our team is dedicated to finding exactly what you need.
       </p>
       <div class="mt-6">
         <a
           href="/about"
-          class="px-6 py-3 border-2 border-white bg-white text-[#1E6CB0] rounded-lg hover:bg-[#155789] inline-block font-bold"
+          class="px-8 py-3  border-white bg-white text-[#1E6CB0] rounded-lg hover:bg-gray-200 inline-block font-bold"
         >
           About Us
         </a>
       </div>
     </div>
-    <div class="flex justify-center items-center">
+    <div class="flex justify-end items-center">
       <img
-        src="./static/img/about/schaefer-auto2.jpeg"
+        src="./static/img/about/schaefer-auto4.jpeg"
         alt="Our Team"
-        class="w-full h-96 object-cover rounded-lg shadow-lg"
+        class="w-128 h-96 object-cover rounded-lg shadow-lg"
       />
     </div>
   </div>
@@ -121,7 +116,7 @@ path: home
         href="/reviews"
         class="px-8 py-4 border-2 border-white bg-[#1E6CB0] text-white rounded-lg hover:bg-[#155789] font-bold"
       >
-        View All Testimonials
+        See All Reviews
       </a>
     </div>
   </div>
@@ -224,7 +219,7 @@ path: home
           <div class="text-center mt-4">
             <button
               type="submit"
-              class="px-8 py-4 bg-white text-[#1E6CB0] font-bold rounded-lg hover:bg-[#155789]"
+              class="px-8 py-4 bg-white text-[#1E6CB0] font-bold rounded-lg hover:bg-gray-200 "
             >
               Send Message
             </button>
