--- a/src/about/index.html
+++ b/src/about/index.html
@@ -63,7 +63,7 @@ layout: default
         <!-- Team Member 1 -->
         <div class="flex flex-col items-center text-center">
           <img
-            src="../static/img/employees/caleb-schaefer.jpg"
+            src="../static/img/employees/caleb-schaefer.jpeg"
             alt="Caleb Schaefer"
             class="w-40 h-40 object-cover rounded-full mb-4"
           />
@@ -83,7 +83,7 @@ layout: default
         <!-- Team Member 2 -->
         <div class="flex flex-col items-center text-center">
           <img
-            src="../static/img/employees/roman.jpg"
+            src="../static/img/employees/roman.jpeg"
             alt="Roman"
             class="w-40 h-40 object-cover rounded-full mb-4"
           />
@@ -101,7 +101,7 @@ layout: default
         <!-- Team Member 3 -->
         <div class="flex flex-col items-center text-center">
           <img
-            src="../static/img/employees/randy.jpg"
+            src="../static/img/employees/randy.jpeg"
             alt="Randy"
             class="w-40 h-40 object-cover rounded-full mb-4"
           />
@@ -118,7 +118,7 @@ layout: default
         <!-- Team Member 4 -->
         <div class="flex flex-col items-center text-center">
           <img
-            src="../static/img/employees/holly.jpg"
+            src="../static/img/employees/holly.jpeg"
             alt="Holly"
             class="w-40 h-40 object-cover rounded-full mb-4"
           />
