some contact changes

--- a/src/index.html
+++ b/src/index.html
@@ -148,8 +148,8 @@ Located in Lomira, Wisconsin, Schaefer Auto is committed to helping you find the
     </div>
 
     <!-- Right Side: Contact Form -->
-    <div class="flex justify-center items-center">
-      <div class="bg-[#1E6CB0] p-10 rounded-lg shadow-md w-full">
+    <div class="flex justify-end items-center">
+      <div class="bg-[#1E6CB0] p-10 rounded-lg shadow-md w-full lg:w-10/12">
         <form
           method="POST"
           action="/thank-you"
