--- a/src/reviews/index.html
+++ b/src/reviews/index.html
@@ -45,53 +45,55 @@ layout: default
       </div>
 
       <!-- Right: Form -->
-      <div class="bg-[#1E6CB0] p-10 rounded-lg shadow-md">
-        <form
-          method="POST"
-          action="/thank-you"
-          netlify
-          class="grid grid-cols-1 gap-4"
-        >
-          <!-- Name Field -->
-          <div>
-            <label for="name" class="block text-white font-semibold"
-              >Name</label
-            >
-            <input
-              type="text"
-              id="name"
-              name="name"
-              required
-              placeholder="Your Name"
-              class="mt-2 w-full p-3 border rounded-lg focus:ring-1 focus:ring-[#1E6CB0]"
-            />
-          </div>
+      <div class="flex justify-end items-center">
+        <div class="bg-[#1E6CB0] p-10 rounded-lg shadow-md w-full lg:w-10/12">
+          <form
+            method="POST"
+            action="/thank-you"
+            netlify
+            class="grid grid-cols-1 gap-4"
+          >
+            <!-- Name Field -->
+            <div>
+              <label for="name" class="block text-white font-semibold"
+                >Name</label
+              >
+              <input
+                type="text"
+                id="name"
+                name="name"
+                required
+                placeholder="Your Name"
+                class="mt-2 w-full p-3 border rounded-lg focus:ring-1 focus:ring-[#1E6CB0]"
+              />
+            </div>
 
-          <!-- Message Field -->
-          <div>
-            <label for="message" class="block text-white font-bold"
-              >Message</label
-            >
-            <textarea
-              id="message"
-              name="message"
-              required
-              rows="3"
-              placeholder="Type your review here..."
-              class="mt-2 w-full p-3 border rounded-lg focus:ring-1 focus:ring-[#1E6CB0]"
-            ></textarea>
-          </div>
+            <!-- Message Field -->
+            <div>
+              <label for="message" class="block text-white font-bold"
+                >Message</label
+              >
+              <textarea
+                id="message"
+                name="message"
+                required
+                rows="3"
+                placeholder="Type your review here..."
+                class="mt-2 w-full p-3 border rounded-lg focus:ring-1 focus:ring-[#1E6CB0]"
+              ></textarea>
+            </div>
 
-          <!-- Submit Button -->
-          <div class="text-center">
-            <button
-              type="submit"
-              class="px-8 py-4 bg-white text-[#1E6CB0] font-semibold rounded-lg hover:bg-gray-200"
-            >
-              Submit Review
-            </button>
-          </div>
-        </form>
+            <!-- Submit Button -->
+            <div class="text-center">
+              <button
+                type="submit"
+                class="px-8 py-4 bg-white text-[#1E6CB0] font-semibold rounded-lg hover:bg-gray-200"
+              >
+                Submit Review
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
   </section>
