--- a/src/contact/index.html
+++ b/src/contact/index.html
@@ -18,15 +18,17 @@ layout: default
         <div class="space-y-6">
           <div>
             <h4>Phone</h4>
-            <p class="text-gray-700">(555) 555-5555</p>
+            <p class="text-gray-700"><a href="tel:9205399846" class="hover:underline">
+              (920) 539-9846
+            </a></p>
           </div>
           <div>
             <h4>Email</h4>
-            <p class="text-gray-700">contact@example.com</p>
+            <p class="text-gray-700">hollyschaeferauto@gmail.com</p>
           </div>
           <div>
             <h4>Location</h4>
-            <p class="text-gray-700">123 Main Street, Hometown, USA</p>
+            <p class="text-gray-700">411 3rd St, Lomira, WI</p>
           </div>
         </div>
       </div>
@@ -35,7 +37,7 @@ layout: default
       <div class="flex justify-center md:justify-end items-center">
         <img
           src="../static/img/about/schaefer-auto5.jpeg"
-          alt="Caleb Schaefer"
+          alt="Schaefer Auto"
           class="w-128 h-96 object-cover rounded-lg shadow-lg"
         />
       </div>
