--- a/src/index.html
+++ b/src/index.html
@@ -134,15 +134,17 @@ Located in Lomira, Wisconsin, Schaefer Auto is committed to helping you find the
       <div class="space-y-6">
         <div>
           <h4>Phone</h4>
-          <p class="text-gray-700">(555) 555-5555</p>
+          <p class="text-gray-700"><a href="tel:9205399846" class="hover:underline">
+            (920) 539-9846
+          </a></p>
         </div>
         <div>
           <h4>Email</h4>
-          <p class="text-gray-700">contact@example.com</p>
+          <p class="text-gray-700">hollyschaeferauto@gmail.com</p>
         </div>
         <div>
           <h4>Location</h4>
-          <p class="text-gray-700">123 Main Street, Hometown, USA</p>
+          <p class="text-gray-700">411 3rd St, Lomira, WI</p>
         </div>
       </div>
     </div>
