--- a/src/contact/index.html
+++ b/src/contact/index.html
@@ -24,7 +24,7 @@ layout: default
           </div>
           <div>
             <h4>Email</h4>
-            <p class="text-gray-700">hollyschaeferauto@gmail.com</p>
+            <p class="text-gray-700">contact.schaeferauto@gmail.com</p>
           </div>
           <div>
             <h4>Location</h4>
