--- a/src/index.html
+++ b/src/index.html
@@ -140,7 +140,7 @@ Located in Lomira, Wisconsin, Schaefer Auto is committed to helping you find the
         </div>
         <div>
           <h4>Email</h4>
-          <p class="text-gray-700">hollyschaeferauto@gmail.com</p>
+          <p class="text-gray-700">contact.schaeferauto@gmail.com</p>
         </div>
         <div>
           <h4>Location</h4>
