--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@ Located in Lomira, Wisconsin, Schaefer Auto is committed to helping you find the
     <div class="flex justify-end items-center">
       <img
         src="./static/img/about/schaefer-auto4.jpeg"
-        alt="Our Team"
+        alt="Welcome to Schaefer Auto"
         class="w-128 h-96 object-cover rounded-lg shadow-lg"
       />
     </div>
