--- a/src/about/index.html
+++ b/src/about/index.html
@@ -68,7 +68,7 @@ layout: default
             class="w-40 h-40 object-cover rounded-full mb-4"
           />
           <h3 class="mb-0">Caleb Schaefer</h3>
-          <h5>Owner</h5>
+          <h5>Buyer</h5>
 
           <p class="text-gray-600 text-left">
             Schaefer Auto originated from Caleb’s passion for “flipping”
