--- a/src/vehicles/index.html
+++ b/src/vehicles/index.html
@@ -36,7 +36,8 @@ title: Vehicle Inventory
   </section>
 
   <!-- Featured Inventory Section -->
-  <section class="container mt-8 px-6">
+  <section class="container mt-12 px-6">
+    <h2 class="font-bold">Latest Vehicles</h2>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
       {% for post in collections.post | reverse %} {% if loop.index <= 6 %} {%
       include "partials/vehicle-section.html" %} {% endif %} {% endfor %}
