--- a/src/vehicles/coming-soon/index.html
+++ b/src/vehicles/coming-soon/index.html
@@ -38,7 +38,7 @@ title: Coming Soon
   <!-- Coming Soon Section -->
   <section class="container mt-12 mb-12 px-6">
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
-      {% for post in collections.post | reverse %}  {% include "partials/vehicle-section.html" %} {% endfor %}
+      {% for post in collections["coming-soon-vehicles"] | reverse %}  {% include "partials/vehicle-section.html" %} {% endfor %}
     </div>
   </section>
 
