--- a/src/index.html
+++ b/src/index.html
@@ -21,11 +21,11 @@ path: home
       
 Located in Lomira, Wisconsin, Schaefer Auto is committed to helping you find the perfect vehicle at a price that suits your budget.
     </p>
-    <div class="mt-10 space-x-4">
+    <div class="mt-8 space-x-4 flex justify-center">
       <!-- First Button: View Inventory (Solid Blue) -->
       <a
         href="/vehicles"
-        class="px-4 py-3 border-2 border-white bg-[#1E6CB0] text-white rounded-lg hover:bg-[#155789] font-bold"
+        class="px-6 py-2 border-2 border-white bg-[#1E6CB0] text-white rounded-lg hover:bg-[#155789] font-bold"
       >
         View Inventory
       </a>
@@ -33,7 +33,7 @@ Located in Lomira, Wisconsin, Schaefer Auto is committed to helping you find the
       <!-- Second Button: Contact Us (Outlined Blue) -->
       <a
       href="https://marinecreditunion.my.site.com/?core=es5"
-      class="px-4 py-3 bg-[#1E6CB0] text-white rounded-lg hover:bg-[#155789] font-bold" target="_blank"
+      class="px-6 py-2 bg-[#1E6CB0] text-white rounded-lg hover:bg-[#155789] font-bold" target="_blank"
     >
       Apply For Financing
     </a>
