--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@ path: home
       
 Located in Lomira, Wisconsin, Schaefer Auto is committed to helping you find the perfect vehicle at a price that suits your budget.
     </p>
-    <div class="mt-8 space-x-4 flex justify-center">
+    <div class="mt-8 gap-4 flex flex-wrap justify-center">
       <!-- First Button: View Inventory (Solid Blue) -->
       <a
         href="/vehicles"
