--- a/src/index.html
+++ b/src/index.html
@@ -24,11 +24,11 @@ Located in Lomira, Wisconsin, Schaefer Auto is committed to helping you find the
     <div class="mt-8 gap-4 flex flex-wrap justify-center">
       <!-- First Button: View Inventory (Solid Blue) -->
       <a
-        href="/vehicles"
-        class="px-4 py-2 border-2 border-white bg-[#1E6CB0] text-white rounded-lg hover:bg-[#155789] font-bold"
-      >
-        View Inventory
-      </a>
+      href="/vehicles"
+      class="px-4 py-2 bg-[#1E6CB0] text-white rounded-lg hover:bg-[#155789] font-bold outline outline-2 outline-white"
+    >
+      View Inventory
+    </a>
 
       <!-- Second Button: Contact Us (Outlined Blue) -->
       <a
