--- a/src/index.html
+++ b/src/index.html
@@ -25,19 +25,26 @@ Located in Lomira, Wisconsin, Schaefer Auto is committed to helping you find the
       <!-- First Button: View Inventory (Solid Blue) -->
       <a
       href="/vehicles"
-      class="px-4 py-2 bg-[#1E6CB0] text-white rounded-lg hover:bg-[#155789] font-bold outline outline-2 outline-white"
+      class="px-6 py-2 bg-[#1E6CB0] text-white rounded-lg hover:bg-[#155789] font-bold outline outline-2 outline-white"
     >
       View Inventory
     </a>
 
       <!-- Second Button: Contact Us (Outlined Blue) -->
       <a
-      href="https://marinecreditunion.my.site.com/?core=es5"
-      class="px-4 py-2 bg-[#1E6CB0] text-white rounded-lg hover:bg-[#155789] font-bold" target="_blank"
+      href="/contact"
+      class="px-6 py-2 bg-[#1E6CB0] text-white rounded-lg hover:bg-[#155789] font-bold"
     >
-      Apply For Financing
+      Contact Us
     </a>
     </div>
+    <div class="mt-6">
+    <a
+      href="https://marinecreditunion.my.site.com/?core=es5"
+      class="px-6 py-3 bg-[#1E6CB0] text-white rounded-lg hover:bg-[#155789] font-bold" target="_blank"
+    >
+      Apply For Financing
+    </a></div>
   </div>
 </section>
 
